--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                             <p>Age : <span>24</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Website : <span>www.domain.com</span></p>
+                                            <p>Linkedin : <span>https://www.linkedin.com/in/avinash-kumar-604054234</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Email : <span>ak5308026@gmail.com</span></p>
@@ -121,7 +121,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="#" class="btn">Download CV</a>
+                                            <a href="CV/Avinash (8).pdf" class="btn"download="Avinash_CV.pdf">Download CV</a>
                                             <a href="#Contact" class="btn hire-me">Hire Me</a>
                                         </div>
                                     </div>
